* Dev - Adding the .gitattributes file to remove unnecessary files from the WordPress version. * Fix - Fixing the top bar menu spacing for mobile version.

--- a/assets/css/scss/layout/_top-menu.scss
+++ b/assets/css/scss/layout/_top-menu.scss
@@ -215,6 +215,25 @@
 			right: 0;
 		}
 	}
+
+	@include media('<tablet') {
+		#menu-top-menu {
+			display: flex;
+			width: 100%;
+			justify-content: flex-end;
+			padding: 0;
+			margin: 0;
+			.menu-item {
+				height: 100%;
+				float: initial;
+				text-align: center;
+				a {
+					font-size: 12px;
+					padding: 0 7px;
+				}
+			}
+		}
+	}
 }
 
 @include top-menu-colours();
